Product overflow fix

--- a/src/app/Components/home/home-page/products/products.component.css
+++ b/src/app/Components/home/home-page/products/products.component.css
@@ -1,11 +1,9 @@
-/* Products Styles */
 body {
-/*border: 35px solid white;*/
   display: flex;
   flex-direction: column;
   padding-top: 40px;
   padding-bottom: 40px;
-background-color: #F5F5F5;
+  background-color: #F5F5F5;
   align-items: center;
   justify-content: center;
 }
@@ -15,13 +13,10 @@ div {
   flex-direction: column;
   padding-bottom: 2px;
 }
-
 section {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-  max-width: 75%;
+  max-width: 70%;
   margin:auto;
 }
 
@@ -30,9 +25,8 @@ span {
   flex-direction: column;
   align-items: center;
   padding-bottom: 40px;
-  margin: auto;
-  max-width: 490px;
-  object-fit: contain;
+  max-width:40%;
+
 }
 
 /*Image Styles*/
@@ -41,11 +35,10 @@ span {
   object-fit: contain;
   border-radius: 3px;
   padding: 0px 15px;
-
 }
 
 #shadow{
-opacity: 50%;
+  opacity: 50%;
   width: 30%;
 }
 
@@ -57,9 +50,10 @@ h2{
 }
 
 p {
-  width: 60%;
+  max-width: 70%;
   text-align: center;
   font-size: larger;
+
 }
 
 /*Button / Link Styles*/
@@ -79,6 +73,7 @@ a {
   }
   section {
     flex-wrap: wrap;
+    align-items: center;
   }
   span {
     margin: 30px 0;
